  And if it does, then do the same procedure as if it was a -journal (read-only database that gets copied to a temp location)
  This was pointed to me by Svante
  - [PREFETCH input] Changed the default output so that loaded DLLs are not included by default, unless the -d|--detail
  option/parameter is used.
  - [SAM input] Changed the handling of SAM database data, it did not properly parse the SAM database file in certain cases
  due to the keys being prefilled with the CMI-CREATE....
  - [NTUSER input] Changed a value check in UserAssist key parsing causing UserAssist keys not properly being parsed.
  - [WIN_LINK input] The values for mtime and atime got swapped (the correct order is CAM not CMA like it was)
  - [SETUPAPI input] Added a 'detailed_time' check, to reduce the text inside the alert by default, unless detail option used.
  - [log2timeline] Updated the man page to reflect updates to the 'detailed_time' changes to setupapi input module.
  - [WIN library] Added a mapping to map up all Windows use of timezones to the one used in the DateTime library.
  - [win_sysinfo PreProc] Updated the pre-processing library so that it checks if a known transform of a Windows named
  timezone information is available and if it is it will compare it to the chosen timezone (and change it if they differ).
  - [LOG2TIMELINE] Small bug in the log2timeline library, causing input modules list that has more than one - sign in it
  not properly verified.
  - [IEHISTORY input] Switched time1 and time2, and started to update the module so it adheres to the newly released, not
  yet complete, style guide.
  - [EVTX input] Updated the EVTX library to the latest release, version 1.1.1 (written by Andreas Schuster)


Version 0.62 (23/11/2011)
  - [FF_CACHE input] New input module, designed to parse the cache files of Firefox. Contributed by John Ritchie
  - [OPENVPN input] New input module, desigend to parse the OpenVPN log files.