@@ -115,6 +115,7 @@ use Log2t::Common;         # common shared methods in the framework
 use Digest::MD5;           # for MD5 sum calculation
 use Pod::Usage;
 use DateTime;              # for local time zone detection
+use IO::Uncompress::Bunzip2 qw(bunzip2 $Bunzip2Error);
 
 # the version variable
 use vars qw($VERSION);
@@ -1551,10 +1552,34 @@ the filehandle to the $self->{'fh'} variable that is used in the tool.
 =cut
 sub _open_file() {
     my $self = shift;
+    my $header_check;
+    my $temp;
 
     open(HF, '<', $self->{'file'}) or return 0;
 
-    $self->{'fh'} = \*HF;
+    # check if this is ZIP file
+    seek(HF, 0, 0);
+    read(HF, $temp, 4) or return 0;
+    $header_check = unpack("i", $temp);
+
+    if (($header_check & 0xFFFFFF) == 0x088b1F) {
+        # we have a gzip file
+        print STDERR "ZIP FILE\n";
+    }
+    elsif (($header_check & 0xFFFFFF) == 0x685A42) {
+        # we have a bzip2 file
+        print STDERR "ZIP FILE\n";
+        seek(HF, 0, 0);
+        $self->{'fh'} = new IO::Uncompress::Bunzip2 \*HF;
+    }
+    elsif ($header_check == 0x04034b50) {
+        # we have a zip file
+        print STDERR "ZIP FILE\n";
+    }
+    else {
+        seek(HF, 0, 0);
+        $self->{'fh'} = \*HF;
+    }
 
     return 1;
 }
